--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,11 +1,10 @@
-
-<mat-sidenav-container class="example-container">
+  <mat-sidenav-container class="example-container">
     <mat-sidenav #sidenav mode="side" [(opened)]="opened">
       Sidenav content
     </mat-sidenav>
 
     <mat-sidenav-content>
-        <router-outlet></router-outlet>
+      <p><button mat-button (click)="sidenav.toggle()">sidenav.toggle()</button></p>
 
     </mat-sidenav-content>
 
