--- a/src/app/tabbed-interface/tabbed-interface.component.html
+++ b/src/app/tabbed-interface/tabbed-interface.component.html
@@ -2,7 +2,7 @@
 <mat-toolbar color="primary">
     <!-- "+" button to add a new tab -->
 
-    <button mat-button (click)="toggleDrawer()">Side menu</button>
+    <button mat-button (click)="toggleDrawer()">	<mat-icon>settings_ethernet</mat-icon></button>
     <button mat-button (click)="addNewTab()"> Dodaj prostoriju </button>
     <span class="spacer"></span>
     <button mat-button (click)="openWarehouse()">Skladište</button>
