--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,6 +1,6 @@
   <mat-sidenav-container class="example-container">
     <mat-sidenav #sidenav mode="side" [(opened)]="opened">
-      Sidenav content
+      <app-side-calc></app-side-calc>
     </mat-sidenav>
 
     <mat-sidenav-content>
