fix side nav add price and wearhouse

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <mat-sidenav-container class="example-container">
-    <mat-sidenav #sidenav mode="side" [(opened)]="opened">
-      Sidenav content
+    <mat-sidenav #sidenav mode="side" [(opened)]="opened" style="width: 50%;">
+      <app-side-calc></app-side-calc>    
     </mat-sidenav>
 
     <mat-sidenav-content>
