--- a/src/app/side-calc/side-calc.component.html
+++ b/src/app/side-calc/side-calc.component.html
@@ -1,4 +1,45 @@
-<p>
-  Ajde radi majke ti mile
-  
-</p>
+<table style="width: 100%;">
+  <tbody>
+    <tr>
+      <th style="width: 50%; vertical-align: top;">
+        <div class="input-group">
+          <mat-form-field>
+            <input matInput [(ngModel)]="searchTerm" placeholder="Search by Name" (input)="searchItems()" />
+          </mat-form-field>
+        
+          <button mat-raised-button color="primary" (click)="searchItems()">Search</button>
+        </div>
+        
+        <mat-grid-list cols="3" rowHeight="20:10">
+          <mat-grid-tile *ngFor="let item of items; let i = index" (mouseenter)="onMouseEnter(item)" (click)="addToToPayList(item)">
+            <div style="height: 100%; width: 100%; display: flex; flex-direction: column; cursor: pointer;" [ngClass]="{'selected-item': selectedItem === item}">
+              <span style="width: 100%; margin-left: 4px;"> {{ item.name }}</span>
+              <span style=" width: 100%;margin-left: 4px;"> ( {{ item.value }} €)</span>
+            </div>
+          </mat-grid-tile>
+        </mat-grid-list>
+      </th>
+      <th style="width: 50%; vertical-align: top;">
+        <h1>Guest 1</h1>
+        <table style="width: 100%;">
+          <tbody>
+            <tr *ngFor="let item of toPayList; let i = index" style="width: 100%;">
+              <th style="width: 100%; display: inline-flex; height: 100%;">
+                <span style="margin-left: 4px;"> {{ item.name }}</span>
+                <span style="margin-left: 4px; margin-right: 5px;"> ( {{ item.value }} €)</span>
+
+              </th>
+              <th>
+                <button mat-button (click)="deleteItem()">
+                  <mat-icon>delete</mat-icon>
+              </button>
+              </th>
+            </tr>
+          </tbody>
+        </table>
+        <br>
+        <h1>Total: {{ totalValue }} €</h1>
+      </th>
+    </tr>
+  </tbody>
+</table>
