--- a/src/app/main-screen/main-screen.component.html
+++ b/src/app/main-screen/main-screen.component.html
@@ -1,14 +1,17 @@
 <mat-toolbar color="primary">
   <span class="spacer"></span>
+  
+  <button mat-button (click)="savePosition()">Save position</button>
   <button mat-button (click)="addTable()">Table</button>
   <button mat-button (click)="addGuest()">Guest</button>
+
   <button mat-button>Delete</button>
 </mat-toolbar>
 
 <div class="example-boundary">
 
-  <div class="example-box" *ngFor="let element of draggableElements" cdkDragBoundary=".example-boundary" cdkDrag>
-    <input [(ngModel)]="element.label" placeholder="Enter name" class="element-input" style="max-width: 100%; max-height: 100%;" />
+  <div class="example-box" *ngFor="let element of draggableElements" cdkDragBoundary=".example-boundary" cdkDrag (cdkDragEnded)="onDragEnd($event, element)">
+    <input [(ngModel)]="element.name" placeholder="Enter name" class="element-input" style="max-width: 100%; max-height: 100%;" />
     <button mat-button (click)="toggleDrawer()" style="background-color: green;">Dodaj</button>
   </div>
 </div>
