Connected warehouse and side calc fixed usre not logged in error

--- a/src/app/warehouse/warehouse.component.html
+++ b/src/app/warehouse/warehouse.component.html
@@ -3,6 +3,7 @@
 <div class="header" style="color:white; background-color:blueviolet;" >
   <h2 style="padding-top: 7px;padding-left: 15px;">Warehouse</h2>
   <div class="delete-button-container">
+    <button mat-raised-button color="primary" (click)="insert()" >Save</button>
     <button mat-raised-button color="warn" (click)="deleteSelectedItems()" >Delete</button>
   </div>
 </div>
