--- a/src/app/tabbed-interface/tabbed-interface.component.html
+++ b/src/app/tabbed-interface/tabbed-interface.component.html
@@ -5,8 +5,9 @@
     <button mat-button (click)="toggleDrawer()">	<mat-icon>settings_ethernet</mat-icon></button>
     <button mat-button (click)="addNewTab()"> Dodaj prostoriju </button>
     <span class="spacer"></span>
+    <button mat-button (click)="register()">New user</button>
     <button mat-button (click)="openWarehouse()">Skladište</button>
-
+    <button mat-button (click)="logout()">Logout</button>
   </mat-toolbar>
   
   <!-- Container div for the mat-tab-group -->
