--- a/src/app/side-calc/side-calc.component.html
+++ b/src/app/side-calc/side-calc.component.html
@@ -23,22 +23,31 @@
         <h1>Guest 1</h1>
         <table style="width: 100%;">
           <tbody>
-            <tr *ngFor="let item of toPayList; let i = index" style="width: 100%;">
-              <th style="width: 100%; display: inline-flex; height: 100%;">
-                <span style="margin-left: 4px;"> {{ item.name }}</span>
-                <span style="margin-left: 4px; margin-right: 5px;"> ( {{ item.value }} €)</span>
-
-              </th>
-              <th>
-                <button mat-button (click)="deleteItem()">
-                  <mat-icon>delete</mat-icon>
-              </button>
-              </th>
+            <tr *ngFor="let item of toPayList; let i = index" style="width: 100%; font-size: 14px;">
+              <td style="width: 100%; display: flex; align-items: center; justify-content: space-between;">
+                <div style="display: flex; align-items: center;">
+                  <span style="margin-right: 5px;">{{ item.name }}</span>
+                  <span>({{ item.value }} €)</span>
+                </div>
+                <div style="display: flex; align-items: center;">
+                  <button mat-icon-button (click)="decrementQuantity(item)">
+                    <mat-icon>remove</mat-icon>
+                  </button>
+                  <span style="margin: 0 4px;">{{ item.quantity }}</span>
+                  <button mat-icon-button (click)="incrementQuantity(item)">
+                    <mat-icon>add</mat-icon>
+                  </button>
+                  <button mat-button (click)="deleteItem(i)">
+                    <mat-icon>delete</mat-icon>
+                  </button>
+                </div>
+              </td>
             </tr>
+            
           </tbody>
         </table>
         <br>
-        <h1>Total: {{ totalValue }} €</h1>
+        <h1>Total: {{ totalValueDisplay }} €</h1>
       </th>
     </tr>
   </tbody>
