Changed list in side calc to Customer and to list inside of customer

--- a/src/app/side-calc/side-calc.component.html
+++ b/src/app/side-calc/side-calc.component.html
@@ -20,10 +20,10 @@
         </mat-grid-list>
       </th>
       <th style="width: 50%; vertical-align: top;">
-        <h1>Guest 1</h1>
+        <h1>{{customerData.name}}</h1>
         <table style="width: 100%;">
           <tbody>
-            <tr *ngFor="let item of toPayList; let i = index" style="width: 100%; font-size: 14px;">
+            <tr *ngFor="let item of customerData?.items; let i = index" style="width: 100%; font-size: 14px;">
               <td style="width: 100%; display: flex; align-items: center; justify-content: space-between;">
                 <div style="display: flex; align-items: center;">
                   <span style="margin-right: 5px;">{{ item.name }}</span>
