--- a/src/app/main-screen/main-screen.component.html
+++ b/src/app/main-screen/main-screen.component.html
@@ -12,7 +12,7 @@
 
   <div class="example-box" *ngFor="let element of draggableElements" cdkDragBoundary=".example-boundary" cdkDrag (cdkDragEnded)="onDragEnd($event, element)">
     <input [(ngModel)]="element.name" placeholder="Enter name" class="element-input" style="max-width: 100%; max-height: 100%;" />
-    <button mat-button (click)="toggleDrawer()" style="background-color: green;">Dodaj</button>
+    <button mat-button (click)="toggleDrawer(element)" style="background-color: green;">Dodaj</button>
   </div>
 </div>
 
