Fix side calc customer name

--- a/src/app/side-calc/side-calc.component.html
+++ b/src/app/side-calc/side-calc.component.html
@@ -20,7 +20,7 @@
         </mat-grid-list>
       </th>
       <th style="width: 50%; vertical-align: top;">
-        <h1>{{customerData.name}}</h1>
+        <h1>{{customerName}}</h1>
         <table style="width: 100%;">
           <tbody>
             <tr *ngFor="let item of customerData?.items; let i = index" style="width: 100%; font-size: 14px;">
