--- a/src/app/warehouse/warehouse.component.html
+++ b/src/app/warehouse/warehouse.component.html
@@ -1,10 +1,13 @@
 <!-- warehouse.component.html -->
 
 <div class="header" style="color:white; background-color:blueviolet;" >
+  <button mat-raised-button color="primary" style="margin-left: 10px;" (click)="back()" >Natrag</button>
   <h2 style="padding-top: 7px;padding-left: 15px;">Warehouse</h2>
   <div class="delete-button-container">
-    <button mat-raised-button color="primary" (click)="insert()" >Save</button>
-    <button mat-raised-button color="warn" (click)="deleteSelectedItems()" >Delete</button>
+
+
+    <button mat-raised-button color="primary" (click)="insert(false)" >Save</button>
+    <button mat-raised-button color="warn" (click)="openYesNoDialog()" >Delete</button>
   </div>
 </div>
 
@@ -22,6 +25,15 @@
       <input matInput [(ngModel)]="newItem.quantity" placeholder="Quantity" />
     </mat-form-field>
 
+    <mat-form-field style="margin-left: 5px;">
+      <mat-label>Kategorija/Vrsta pića</mat-label>
+      <mat-select [(ngModel)]="newItem.category" name="category">
+        @for (category of searchCategory; track category) {
+          <mat-option [value]="category.id">{{category.name}}</mat-option>
+        }
+      </mat-select>
+    </mat-form-field>
+
     <button mat-raised-button color="primary" (click)="addItem()">Add Item</button>
   </div>
 
@@ -29,20 +41,31 @@
     <mat-form-field>
       <input matInput [(ngModel)]="searchTerm" placeholder="Search by Name" (input)="searchItems()" />
     </mat-form-field>
-  
+    <mat-form-field style="margin-left: 5px;">
+      <mat-label>Kategorija/Vrsta pića</mat-label>
+      <mat-select [(ngModel)]="searchCategoryValue" (selectionChange)="onCategoryChange()" name="category">
+        @for (category of searchCategory; track category) {
+          <mat-option [value]="category.id">{{category.name}}</mat-option>
+        }
+      </mat-select>
+    </mat-form-field>
     <button mat-raised-button color="primary" (click)="searchItems()">Search</button>
     <button mat-raised-button color="warn" (click)="resetSearch()">Reset Search</button>
+
   </div>
-  
+
 </div>
 
-<mat-grid-list cols="12" rowHeight="10:10">
-  <mat-grid-tile *ngFor="let item of items;let i = index"  >
-    <div style="display: flex; flex-direction: column;">
-      <mat-checkbox   (change)="toggleItemSelection(item)" [checked]="selectedItems.has(item)"></mat-checkbox>
-      <span style="margin-left: 4px;"> Name: {{ item.name }}</span>
-      <span style="margin-left: 4px;"> Number: {{ item.quantity }}</span>
-      <span style="margin-left: 4px;"> Price: {{ item.value }}€</span>
+<mat-grid-list cols="10" rowHeight="10:10">
+  <mat-grid-tile *ngFor="let item of items;let i = index">
+    <div style="display: flex; flex-direction: column; height: 100%;">
+      <mat-checkbox (change)="toggleItemSelection(item)" [checked]="selectedItems.has(item)"></mat-checkbox>
+      <div style="flex-grow: 1; display: flex; flex-direction: column; align-items: flex-start;">
+        <span style="margin-left: 4px; font-size: small;"><b>{{ item.name }}</b></span>
+        <span style="margin-left: 4px; font-size: small;">Komada: {{ item.quantity }}</span>
+        <span style="margin-left: 4px; font-size: small;">Cijena: {{ item.value }}€</span>
+      </div>
     </div>
   </mat-grid-tile>
 </mat-grid-list>
+
