--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,11 +5,16 @@
     left: 0;
     right: 0;
   }
-  
+
   .example-events {
     width: 300px;
     height: 200px;
     overflow: auto;
     border: 1px solid #555;
   }
-  
+
+  /* Position warehouse sidenav on the right */
+  .mat-sidenav-position-end {
+    left: auto;
+    right: 0;
+  }
