--- a/src/app/tabbed-interface/tabbed-interface.component.html
+++ b/src/app/tabbed-interface/tabbed-interface.component.html
@@ -5,11 +5,11 @@
     <button mat-button (click)="toggleDrawer()">	<mat-icon>settings_ethernet</mat-icon></button>
     <button mat-button (click)="addNewTab()"> Dodaj prostoriju </button>
     <span class="spacer"></span>
-    <button mat-button (click)="register()">New user</button>
+    <button mat-button (click)="register()">Kreiraj korisnika</button>
     <button mat-button (click)="openWarehouse()">Skladište</button>
-    <button mat-button (click)="logout()">Logout</button>
+    <button mat-button (click)="logout()">Odjavi se</button>
   </mat-toolbar>
-  
+
   <!-- Container div for the mat-tab-group -->
   <div class="tab-container">
     <mat-tab-group>
@@ -17,12 +17,12 @@
         <!-- Content of the tab -->
            <!-- "x" button to remove the tab -->
           <!-- "x" button to remove the tab -->
-      
+
         <ng-container *ngComponentOutlet="tab.content"></ng-container>
         <button mat-button class="close-button" (click)="removeTab(tab)">
             <span style="color: white;">Izbriši prostoriju</span>
         </button>
-     
+
       </mat-tab>
     </mat-tab-group>
   </div>
