Added delete on draggable object added dialog before deleting on all delete buttons add checkbox on draggable object for selection

--- a/src/app/dialogs/dialog/dialog.component.html
+++ b/src/app/dialogs/dialog/dialog.component.html
@@ -3,7 +3,7 @@
   <p>{{ data.message }}</p>
 </div>
 <div mat-dialog-actions class="mat-dialog-actions custom-actions">
-  <button mat-raised-button color="warn" [mat-dialog-close]="true" class="left-button">{{data.buttonOne}}</button>
+  <button mat-raised-button color="warn" [mat-dialog-close]="false" class="left-button">{{data.buttonOne}}</button>
   <span class="spacer"></span>
-  <button mat-raised-button color="primary" [mat-dialog-close]="false" class="right-button">{{data.buttonTwo}}</button>
+  <button mat-raised-button color="primary" [mat-dialog-close]="true" class="right-button">{{data.buttonTwo}}</button>
 </div>
