--- a/src/app/main-screen/main-screen.component.css
+++ b/src/app/main-screen/main-screen.component.css
@@ -8,8 +8,10 @@
 
 .example-box {
   position: absolute;
-  width: 100px;
-  height: 80px;
+  width: 120px;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
   border: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
   cursor: move;
@@ -42,4 +44,10 @@
   max-height: 100%;
   border: dotted #ccc 2px;
   overflow: hidden;
+}
+.bottom-row {
+  margin-top: auto; /* Push the bottom row to the bottom */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
