--- a/src/app/tabbed-interface/tabbed-interface.component.html
+++ b/src/app/tabbed-interface/tabbed-interface.component.html
@@ -19,7 +19,7 @@
           <!-- "x" button to remove the tab -->
 
         <ng-container *ngComponentOutlet="tab.content"></ng-container>
-        <button mat-button class="close-button" (click)="removeTab(tab)">
+        <button mat-button class="close-button" (click)="openDeleleteDialog(tab)">
             <span style="color: white;">Izbriši prostoriju</span>
         </button>
 
