--- a/src/app/tabbed-interface/tabbed-interface.component.html
+++ b/src/app/tabbed-interface/tabbed-interface.component.html
@@ -2,14 +2,14 @@
 <mat-toolbar color="primary">
     <!-- "+" button to add a new tab -->
 
-    <button mat-button (click)="toggleDrawer()">	<mat-icon>settings_ethernet</mat-icon></button>
-    <button mat-button (click)="addNewTab()"> Dodaj prostoriju </button>
+    <button mat-button style="background-color: #3d96e3; margin-right: 10px;" (click)="toggleDrawer()">	<mat-icon>settings_ethernet</mat-icon> Kalkulator</button>
+    <button mat-button style="background-color: green" (click)="addNewTab()">+ Dodaj prostoriju </button>
     <span class="spacer"></span>
       <h3>{{user.username}}</h3>
     <span class="spacer"></span>
     <button *ngIf="user.id === 12" mat-button (click)="register()">Kreiraj korisnika</button>
-    <button mat-button (click)="openWarehouse()">Skladište</button>
-    <button mat-button (click)="logout()">Odjavi se</button>
+    <button mat-button style="background-color: #3d96e3;" (click)="openWarehouse()">Skladište</button>
+    <button mat-button style="background-color: rgb(227, 61, 61); margin-left: 10px;" (click)="logout()">Odjavi se</button>
   </mat-toolbar>
 
   <!-- Container div for the mat-tab-group -->
@@ -21,8 +21,8 @@
           <!-- "x" button to remove the tab -->
 
         <ng-container *ngComponentOutlet="tab.content"></ng-container>
-        <button mat-button class="close-button" (click)="openDeleleteDialog(tab)">
-            <span style="color: white;">Izbriši prostoriju</span>
+        <button mat-button style="background-color: rgb(227, 61, 61); " class="close-button" (click)="openDeleleteDialog(tab)">
+            <span style="color: white; ">Izbriši prostoriju</span>
         </button>
 
       </mat-tab>
