--- a/src/app/warehouse/warehouse.component.html
+++ b/src/app/warehouse/warehouse.component.html
@@ -69,18 +69,19 @@
   </div>
 
 <mat-grid-list cols="{{numberOfCols}}" rowHeight="10:10">
-  <mat-grid-tile *ngFor="let item of items;let i = index">
+  <mat-grid-tile *ngFor="let item of items;let i = index" [class.low-quantity]="item.quantity < 10">
     <div style="display: flex; flex-direction: column; height: 100%;">
       <mat-checkbox (change)="toggleItemSelection(item)" [checked]="selectedItems.has(item)"></mat-checkbox>
       <div style="flex-grow: 1; display: flex; flex-direction: column; align-items: flex-start;">
-        <input matInput [(ngModel)]="item.name" placeholder="Name" style="width: 50%; font-size: 12px; font-weight:bold ; background-color: lightblue; border-style: none;" />
+        <input matInput [(ngModel)]="item.name" placeholder="Name" style="width: 50%; font-size: 12px; font-weight:bold ; background-color: lightblue; border-style: none;"
+        [ngStyle]="{'background-color': item.quantity < 10 ? 'red' : 'inherit'}" required/>
         <div style="display: flex; align-items: center;">
           <label for="stanje" style="margin-right: 5px;">Stanje:</label>
-          <input matInput id="stanje" [(ngModel)]="item.quantity" placeholder="Qty" type="number" style="width: 50%; font-size: 12px;background-color: lightblue; border-style: none;" />
+          <input matInput id="stanje" [(ngModel)]="item.quantity" placeholder="Qty" type="number" style="width: 50%; font-size: 12px;background-color: lightblue; border-style: none;" required min="0" />
         </div>
         <div style="display: flex; align-items: center;">
           <label for="cijena" style="margin-right: 5px;">Cijena:</label>
-          <input matInput id="cijena" [(ngModel)]="item.value" placeholder="Val" type="number" style="width: 50%; font-size: 12px;background-color: lightblue; border-style: none;" />
+          <input matInput id="cijena" [(ngModel)]="item.value" placeholder="Val" type="number" style="width: 50%; font-size: 12px;background-color: lightblue; border-style: none;" required/>
         </div>
       </div>
     </div>
