Added dialog on start and on loading tables  fixed index on increment

--- a/src/app/main-screen/main-screen.component.html
+++ b/src/app/main-screen/main-screen.component.html
@@ -2,7 +2,7 @@
   <span class="spacer"></span>
   <button mat-button (click)="multiPay()">Ukupno</button>
   <button mat-button (click)="downloadListAsTextFile()">Pregled dana</button>
-  <button mat-button (click)="savePosition()">Spremi stolove</button>
+  <button mat-button (click)="savePosition()">Spremi sve prostorije</button>
   <button mat-button style="background-color: #3d96e3;" (click)="addTable()">+ Stol</button>
   <button mat-button style="background-color: green;" (click)="addGuest()">+ Gost</button>
 
