--- a/src/app/warehouse/warehouse.component.html
+++ b/src/app/warehouse/warehouse.component.html
@@ -65,11 +65,14 @@
     <mat-form-field style="width: 100px;">
       <input matInput id="brojStupaca" [(ngModel)]="numberOfCols" placeholder="Broj stupaca"  type="number" style="width: 60px; font-size: 16px; " />
     </mat-form-field>
-
+    <label for="alarm" style="margin-left: 40px; margin-right: 10px;">Alarm</label>
+    <mat-form-field style="width: 100px;">
+      <input matInput id="alarm" [(ngModel)]="alarm" placeholder="Alarm"  type="number" style="width: 60px; font-size: 16px; " />
+    </mat-form-field>
   </div>
 
 <mat-grid-list cols="{{numberOfCols}}" rowHeight="10:10">
-  <mat-grid-tile *ngFor="let item of items;let i = index" [class.low-quantity]="item.quantity < 10">
+  <mat-grid-tile *ngFor="let item of items;let i = index" [class.low-quantity]="item.quantity < alarm">
     <div style="display: flex; flex-direction: column; height: 100%;">
       <mat-checkbox (change)="toggleItemSelection(item)" [checked]="selectedItems.has(item)"></mat-checkbox>
       <div style="flex-grow: 1; display: flex; flex-direction: column; align-items: flex-start;">
@@ -77,7 +80,7 @@
         [ngStyle]="{'background-color': item.quantity < 10 ? 'red' : 'inherit'}" required/>
         <div style="display: flex; align-items: center;">
           <label for="stanje" style="margin-right: 5px;">Stanje:</label>
-          <input matInput id="stanje" [(ngModel)]="item.quantity" placeholder="Qty" type="number" style="width: 50%; font-size: 12px;background-color: lightblue; border-style: none;" required min="0" />
+          <input matInput id="stanje" [(ngModel)]="item.quantity" placeholder="Qty" type="number" style="width: 50%; font-size: 12px;background-color: lightblue; border-style: none;" required min="0" appNonNegative />
         </div>
         <div style="display: flex; align-items: center;">
           <label for="cijena" style="margin-right: 5px;">Cijena:</label>
