--- a/src/app/tabbed-interface/tabbed-interface.component.html
+++ b/src/app/tabbed-interface/tabbed-interface.component.html
@@ -16,17 +16,12 @@
 
   <!-- Container div for the mat-tab-group -->
   <div class="tab-container">
-    <mat-tab-group  [selectedIndex]="activeTabId" (selectedIndexChange)="onTabChange($event)">
+    <mat-tab-group [selectedIndex]="getSelectedIndex()" (selectedIndexChange)="onTabChange($event)">
       <mat-tab *ngFor="let tab of tabbedInterfaceService.tabs" [label]="tab.label">
-        <!-- Content of the tab -->
-           <!-- "x" button to remove the tab -->
-          <!-- "x" button to remove the tab -->
-
-  <ng-container *ngComponentOutlet="tab.content; inputs: { tabId: tab.id } "></ng-container>
-        <button mat-button style="background-color: rgb(227, 61, 61); " class="close-button" (click)="openDeleleteDialog(tab)">
-            <span style="color: white; ">Izbriši prostoriju</span>
+        <ng-container *ngComponentOutlet="tab.content; inputs: { tabId: tab.id }"></ng-container>
+        <button mat-button style="background-color: rgb(227, 61, 61);" class="close-button" (click)="openDeleleteDialog(tab)">
+          <span style="color: white;">Izbriši prostoriju</span>
         </button>
-
       </mat-tab>
     </mat-tab-group>
   </div>
